fix Details arrows in Safari and on mobile

--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -42,3 +42,7 @@
 li {
   margin-left: 1em;
 }
+
+details > summary::-webkit-details-marker {
+  display: none;
+}
